update scrollbar styling, fix backdrop logic

--- a/client/src/styles/styles.scss
+++ b/client/src/styles/styles.scss
@@ -3,97 +3,115 @@
 
 
 :root {
-    --primary: #007bff;
-    --secondary: #FFCBCB;
-    --success: #28a745;
-    --danger: #dc3545;
-    --warning: #ffc107;
-    --info: #17a2b8;
-    --light: #f8f9fa;
-    --dark: #2E2E48;
-    --dark-transparent: rgba(46, 46, 72, 0.7);
-    --light-grey: #373646;
-    --light-grey-transparent: rgba(55, 54, 70, 0.7);
-    --background: #201F31;
-    --text: #fff;
+  --primary: #007bff;
+  --secondary: #FFCBCB;
+  --success: #28a745;
+  --danger: #dc3545;
+  --warning: #ffc107;
+  --info: #17a2b8;
+  --light: #f8f9fa;
+  --dark: #2E2E48;
+  --dark-transparent: rgba(46, 46, 72, 0.7);
+  --light-grey: #373646;
+  --light-grey-transparent: rgba(55, 54, 70, 0.7);
+  --background: #201F31;
+  --text: #fff;
 }
 
 html,
 body {
-    height: 100%;
+  height: 100%;
 }
 
 body {
-    margin: 0;
-    font-family: "Lunasima", "Helvetica Neue", sans-serif;
-    font-size: 20px;
-    color: var(--text);
-    background-color: var(--background);
+  margin: 0;
+  font-family: "Lunasima", "Helvetica Neue", sans-serif;
+  font-size: 20px;
+  color: var(--text);
+  background-color: var(--background);
+}
+
+body::-webkit-scrollbar {
+  width: 15px;
+}
+
+body::-webkit-scrollbar-track {
+  border-radius: 0;
+  background-color: rgba(0, 0, 0, .2);
+}
+
+body::-webkit-scrollbar-thumb {
+  border-radius: 0;
+  background-color: rgba(255, 255, 255, .4);
+}
+
+.no-scroll {
+  overflow: hidden;
 }
 
 .wrapper {
-    padding-top: 90px;
+  padding-top: 90px;
 }
 
 a {
-    text-decoration: none;
+  text-decoration: none;
 }
 
 .main-header {
-    display: flex;
-    align-items: center;
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    width: 100%;
-    background-color: var(--dark-transparent);
-    backdrop-filter: blur(10px);
-    align-items: center;
-    height: 90px;
+  display: flex;
+  align-items: center;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  width: 100%;
+  background-color: var(--dark-transparent);
+  backdrop-filter: blur(10px);
+  align-items: center;
+  height: 90px;
 
-    .nav-item {
-        padding: 1rem;
-    }
+  .nav-item {
+    padding: 1rem;
+  }
 }
 
 .nav-link {
+  color: var(--text);
+
+  &:hover {
+    color: var(--secondary);
+    cursor: pointer;
+  }
+
+  &:focus {
     color: var(--text);
-
-    &:hover {
-        color: var(--secondary);
-        cursor: pointer;
-    }
-
-    &:focus {
-        color: var(--text);
-    }
+  }
 }
 
 .link-static {
-    &:hover {
-        color: unset;
-    }
+  &:hover {
+    color: unset;
+  }
 
-    &:focus {
-        color: unset;
-    }
+  &:focus {
+    color: unset;
+  }
 }
 
 .text-primary {
-    color: var(--text);
+  color: var(--text);
 }
 
 .btn-empty {
-    background: none;
-    border: none;
-    padding: 0;
-    margin: 0;
-    font: inherit;
-    color: inherit;
-    cursor: pointer;
-    outline: none;
-    display: inline-flex;
-    align-items: center;
-    justify-content: center;
+  background: none;
+  border: none;
+  padding: 0;
+  margin: 0;
+  font: inherit;
+  color: inherit;
+  cursor: pointer;
+  outline: none;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
 }
